--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "eslint-config-prettier": "^8.3.0",
     "eslint-plugin-svelte3": "^3.2.0",
     "prettier": "2.3.2",
+    "prettier-plugin-svelte": "^2.3.1",
     "svelte": "^3.37.0",
     "vite": "^2.4.2"
   }
