--- a/package.json
+++ b/package.json
@@ -22,6 +22,11 @@
     "eslint-plugin-svelte3": "^3.2.0",
     "prettier": "2.3.2",
     "prettier-plugin-svelte": "^2.3.1",
+    "stylelint": "^13.13.1",
+    "stylelint-config-prettier": "^8.0.2",
+    "stylelint-config-property-sort-order-smacss": "^7.1.0",
+    "stylelint-config-standard": "^22.0.0",
+    "stylelint-order": "^4.1.0",
     "svelte": "^3.37.0",
     "vite": "^2.4.2"
   }
