--- a/package.json
+++ b/package.json
@@ -13,7 +13,11 @@
   "scripts": {
     "dev": "vite",
     "build": "vite build",
-    "serve": "vite preview"
+    "serve": "vite preview",
+    "lint": "npm run lint:eslint && npm run lint:stylelint && npm run lint:prettier",
+    "lint:eslint": "eslint --fix 'src/**'",
+    "lint:stylelint": "npx stylelint '**/*.svelte'",
+    "lint:prettier": "npx prettier --write ."
   },
   "devDependencies": {
     "@sveltejs/vite-plugin-svelte": "^1.0.0-next.11",
