--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "eslint": "^7.31.0",
     "eslint-config-prettier": "^8.3.0",
     "eslint-plugin-svelte3": "^3.2.0",
+    "gitmoji-cli": "^4.1.0",
     "husky": "^7.0.1",
     "lint-staged": "^11.1.0",
     "prettier": "2.3.2",
