--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "build": "vite build",
     "serve": "vite preview",
     "lint": "npm run lint:eslint && npm run lint:stylelint && npm run lint:prettier",
-    "lint:eslint": "eslint --fix 'src/**'",
+    "lint:eslint": "eslint --fix 'src/**/*.{js,svelte}'",
     "lint:stylelint": "stylelint --fix '**/*.svelte'",
     "lint:prettier": "prettier --write ."
   },
